[package]
name = "ady_sockets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.0"
log = { version = "*", features = ["max_level_debug", "release_max_level_info"] }
bincode = "*"
snap = "0.2"
bimap = "*"
serde = "*"